[tool.poetry]
name = "restaurant-booking-api"
version = "0.1.0"
description = "Restaurant table booking API"
authors = ["Oleksii Oleksiichuk <frodo.work@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]          # tells Poetry our source lives in src/

[tool.poetry.dependencies]
python           = "^3.12"
fastapi          = ">=0.110"
uvicorn          = {extras = ["standard"], version = ">=0.29"}
sqlalchemy       = {extras = ["asyncio"], version = "^2.0"}
asyncpg          = ">=0.29"             # async PostgreSQL driver
alembic          = "^1.13"             # migrations
redis            = {extras = ["hiredis"], version = "^5.0"}
minio            = "^7.2"
pydantic-settings = "^2.0"
python-multipart  = ">=0.0.9"          # required for FastAPI form/file handling


[tool.poetry.group.dev.dependencies]
pytest           = "^8.0"
pytest-asyncio   = ">=0.23"
httpx            = ">=0.27"            # async HTTP client for testing FastAPI
pytest-cov       = "^5.0"
ruff             = ">=0.4"             # linting + formatting
mypy             = "^1.10"
pre-commit       = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length    = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E/W = style errors   F = pyflakes (unused imports etc)
# I   = isort          N = naming conventions
# UP  = pyupgrade (flags old syntax)

[tool.mypy]
python_version       = "3.12"
strict               = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"       # every async test runs without @pytest.mark.asyncio
testpaths    = ["tests"]